Added Some Stuff
make sure to change to your database in application.properties

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>First Page</title>
+    <title>Kailua Car Rental</title>
 </head>
 <body>
-<h1>Hello world</h1>
+<h1>Weclome to Kailua Car Rental</h1>
+    <div>
+        <a href="customers.html">
+            <button class="btn-customers" id="btn-customers">Customers Menu</button>
+        </a>
+    </div>
 </body>
 </html>
