Added Link To Customers
and some other shit

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -5,11 +5,12 @@
     <title>Kailua Car Rental</title>
 </head>
 <body>
-<h1>Weclome to Kailua Car Rental</h1>
+<h1>Welcome to Kailua Car Rental</h1>
     <div>
-        <a href="customers.html">
-            <button class="btn-customers" id="btn-customers">Customers Menu</button>
+        <a href="/customers">
+            <button class="btn-customers" id="btn-customers">Customers</button>
         </a>
     </div>
+
 </body>
 </html>
