--- a/src/main/resources/templates/home/customers.html
+++ b/src/main/resources/templates/home/customers.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8">
         <title>Customers Menu</title>
+        <link rel="stylesheet" type="text/css" href="customers.css">
     </head>
     <body>
+
         <p>WIP</p>
+
+        <h1>Customer List</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Address</th>
+                <th>ZIP</th>
+                <th>Mobile Phone</th>
+                <th>Additional Phone</th>
+                <th>Email</th>
+                <th>Driver License</th>
+                <th>Driver Since</th>
+
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr th:each="customer: ${customers}">
+                <td th:text="${customer.customer_id}"/>
+                <td th:text="${customer.first_name}"/>
+                <td th:text="${customer.last_name}"/>
+                <td th:text="${customer.st_address}"/>
+                <td th:text="${customer.zip}"/>
+                <td th:text="${customer.mobile_phone}"/>
+                <td th:text="${customer.addit_phone}"/>
+                <td th:text="${customer.email}"/>
+                <td th:text="${customer.driver_license}"/>
+                <td th:text="${customer.driver_since}"/>
+
+            </tr>
+
+        </tbody>
+
+
+    </table>
+
     </body>
 </html>
