--- a/src/main/resources/templates/home/add_customer.html
+++ b/src/main/resources/templates/home/add_customer.html
@@ -9,35 +9,46 @@
     <h1>Add New Customer</h1>
 
     <form action="/add_customer" method="post">
-        <br>
-        <label>Enter First Name</label>
+            <div>
+        <label>Enter First Name</label><br>
         <input type="text" name="first_name">
-        <br>
-        <label>Enter Last Name</label>
+            </div>
+             <div>
+        <label>Enter Last Name</label><br>
         <input type="text" name="last_name">
-        <br>
-        <label>Enter Street Address</label>
+            </div>
+             <div>
+        <label>Enter Street Address</label><br>
         <input type="text" name="st_address">
-        <br>
-        <label>Enter ZIP Code</label>
+            </div>
+             <div>
+        <label>Enter ZIP Code</label><br>
         <input type="number" name="zip">
-        <br>
-        <label>Enter Mobile Phone</label>
+            </div>
+             <div>
+        <label>Enter Mobile Phone</label><br>
         <input type="number" name="mobile_phone">
-        <br>
-        <label>Enter Additional Phone(Optional)</label>
+             </div>
+            <div>
+        <label>Enter Additional Phone(Optional)</label><br>
         <input type="number" name="addit_phone">
-        <br>
-        <label>Enter Email</label>
+             </div>
+              <div>
+        <label>Enter Email</label><br>
         <input type="email" name="email">
-        <br>
-        <label>Enter Driver License Number</label>
+              </div>
+                <div>
+        <label>Enter Driver License Number</label><br>
         <input type="number" name="driver_license">
-        <br>
-        <label>Enter Driver Since Date</label>
+              </div>
+               <div>
+        <label>Enter Driver Since Date</label><br>
         <input type="date" name="driver_since">
+              </div>
         <br>
-        <input style="background-color: aquamarine" type="submit" value="Add Customer">
+                <div>
+        <input style="background-color: azure" type="submit" value="Add Customer">
+               </div>
     </form>
 
 
