--- a/src/main/resources/templates/home/add_customer.html
+++ b/src/main/resources/templates/home/add_customer.html
@@ -11,23 +11,23 @@
     <form action="/add_customer" method="post">
             <div>
         <label>Enter First Name</label><br>
-        <input type="text" name="first_name">
+        <input type="text" name="first_name" required>
             </div>
              <div>
         <label>Enter Last Name</label><br>
-        <input type="text" name="last_name">
+        <input type="text" name="last_name" required>
             </div>
              <div>
         <label>Enter Street Address</label><br>
-        <input type="text" name="st_address">
+        <input type="text" name="st_address" required>
             </div>
              <div>
         <label>Enter ZIP Code</label><br>
-        <input type="number" name="zip">
+        <input type="number" name="zip" required>
             </div>
              <div>
         <label>Enter Mobile Phone</label><br>
-        <input type="number" name="mobile_phone">
+        <input type="number" name="mobile_phone" required>
              </div>
             <div>
         <label>Enter Additional Phone(Optional)</label><br>
@@ -35,15 +35,15 @@
              </div>
               <div>
         <label>Enter Email</label><br>
-        <input type="email" name="email">
+        <input type="email" name="email" required>
               </div>
                 <div>
         <label>Enter Driver License Number</label><br>
-        <input type="number" name="driver_license">
+        <input type="number" name="driver_license" required>
               </div>
                <div>
         <label>Enter Driver Since Date</label><br>
-        <input type="date" name="driver_since">
+        <input type="date" name="driver_since" required>
               </div>
         <br>
                 <div>
