--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -10,7 +10,10 @@
         <a href="/customers">
             <button class="btn-customers" id="btn-customers">Customers</button>
         </a>
+        <a th:href="${'/carMenu'}">
+            <button id="btn_cars">Go to Car Menu</button>
+    </a>
     </div>
-
+ 
 </body>
 </html>
