--- a/src/main/resources/templates/home/viewCar.html
+++ b/src/main/resources/templates/home/viewCar.html
@@ -19,5 +19,9 @@
     <span>Horsepower: </span><span th:text="${carComplete.hp}"/><br />
     <span>Seats: </span><span th:text="${carComplete.seats}"/><br />
 
+    <br />
+    <a href="/carMenu">
+        <button class="btn_back">Go Back</button>
+    </a>
 </body>
 </html>
