Added "Go Back" Buttons

--- a/src/main/resources/templates/home/customers.html
+++ b/src/main/resources/templates/home/customers.html
@@ -67,6 +67,9 @@
     <a href="/add_customer">
         <button class="btn-create" id="btn-create">Add New Customer</button>
     </a>
+    <a href="/">
+        <button class="btn_back">Go Back</button>
+    </a>
 </div>
 </body>
 </html>
