--- a/src/main/resources/templates/home/carMenu.html
+++ b/src/main/resources/templates/home/carMenu.html
@@ -41,5 +41,9 @@
             </tr>
         </tbody>
     </table>
+    <br />
+    <a href="/">
+        <button class="btn_back">Go Back</button>
+    </a>
 </body>
 </html>
