--- a/src/main/resources/templates/home/update_customer.html
+++ b/src/main/resources/templates/home/update_customer.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Update Customer</title>
+    <link rel="stylesheet" type="text/css" href="customers.css">
 </head>
 <body>
 <h1>Update Customer</h1>
