--- a/src/main/resources/templates/home/viewCar.html
+++ b/src/main/resources/templates/home/viewCar.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="customers.css">
 </head>
 <body>
     <h1>Car Detailed Information</h1>
