--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Kailua Car Rental</title>
+    <link rel="stylesheet" type="text/css" href="customers.css">
 </head>
 <body>
 <h1>Welcome to Kailua Car Rental</h1>
