Contract Button, Contract Menu Added
Quick Addition

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -14,6 +14,9 @@
         <a th:href="${'/carMenu'}">
             <button id="btn_cars">Go to Car Menu</button>
         </a>
+        <a href="/contracts">
+            <button class="btn-contracts" id="btn-contracts">Contracts</button>
+        </a>
     </div>
  
 </body>
