--- a/src/main/resources/templates/home/carMenu.html
+++ b/src/main/resources/templates/home/carMenu.html
@@ -3,12 +3,13 @@
 <head>
     <link rel="stylesheet" type="text/css" href="customers.css">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Car Menu</title>
+    <link rel="stylesheet" type="text/css" href="/customers.css">
 </head>
 <body>
     <h1>Cars Menu</h1>
     <a href="/createCar">
-        <button id="btn-createCar">Add Car</button>
+        <button id="btn-create" class="btn-create">Add Car</button>
     </a>
     <table>
         <thead>
