--- a/src/main/resources/templates/home/createCar.html
+++ b/src/main/resources/templates/home/createCar.html
@@ -9,15 +9,15 @@
 <h1>Add new Car</h1>
    <form action="/createCar" method="post">
        <label>Enter Brand ID: </label>
-       <input type="text" name="brandModel_id"><br />
-       <label>Enter Registration Number ( XXXXXXX - 7 chars ): </label>
-       <input type="text" name="reg_num"><br />
-       <label>Enter Registration Date (YYYY-MM-DD): </label>
-       <input type="text" name="reg_date"><br />
-       <label>Enter Mileage: </label>
-       <input type="text" name="mileage"><br />
+       <input type="text" name="brandModel_id" required pattern="^[1-9][0-9]*"><br />
+       <label>Enter Registration Number (7 Chars): </label>
+       <input type="text" name="reg_num" required pattern="\D\D\d\d\d\d\d"><br />
+       <label>Enter Registration Date: </label>
+       <input type="date" name="reg_date" required max="2020-05-05"><br />
+       <label>Enter Mileage (even 0): </label>
+       <input type="text" name="mileage" required pattern="\d*"><br />
        <label>Enter Car Type</label>
-       <input type="text" name="carType_id"><br />
+       <input type="text" name="carType_id" required pattern="^[1-9][0-9]*"><br />
 
        <input type="submit" value="Add new Car">
 
