--- a/src/main/resources/static/frontpage.css
+++ b/src/main/resources/static/frontpage.css
@@ -1,11 +1,45 @@
-body{
-    background: aliceblue;
+body {
+    background-image: url("car.jpg");
+    background-color: darkgrey;
+    background-size: cover;
+}
+.bttn{
+  text-align: center;
+}
+.bttn {
+    transition-duration: 0.4s;
+}
+
+.bttn:hover {
+    background-color: blueviolet;
+    color: white;
+}
+.bttn1{
+    text-align: center;}
+.bttn1 {
+    transition-duration: 0.4s;
+}
+
+.bttn1:hover {
+    background-color: yellowgreen;
+    color: greenyellow;
+}
+.bttn2{
+    text-align: center;
+}
+.bttn2 {
+    transition-duration: 0.4s;
+}
+
+.bttn2:hover {
+    background-color: orangered;
+    color: blueviolet;}
+h1{
+    text-align: center;
 }
 table.center{
     margin-left: auto;
     margin-right: auto;
-}
-table{
     border-collapse: collapse;
     width: auto;
 }
@@ -13,12 +47,10 @@ table{
 th{
     background-color: lightblue;
 }
-h1{
-    text-align: left;
-}
+
 td, th{
     border: 1px solid black;
-    text-align: center;
+    text-align: left;
     padding: 4px;
 }
 tr:nth-child(even){
@@ -60,7 +92,7 @@ tr:nth-child(even){
 .label{
     display: inline-block;
     width: 150px;
-    text-align: center;
+    text-align: left;
     margin-right:30px;
     margin-top:100px;
 }
