--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
-<br lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Kailua Car Rental</title>
-    <link rel="stylesheet" type="text/css" href="frontpage.css">
+    <link rel="stylesheet" type="text/css" href="customers.css">
 </head>
+<body>
 <h1>Welcome to Kailua Car Rental</h1>
-<br/>
-    <div class="bttn">
+    <div>
         <a href="/customers">
             <button class="btn-customers" id="btn-customers">Customers</button>
         </a>
-    </div>
-<br/>
-<br/>
-    <div class="bttn1">
         <a th:href="${'/carMenu'}">
             <button id="btn_cars">Go to Car Menu</button>
         </a>
-    </div>
-<br/>
-<br/>
-    <div class="bttn2">
         <a href="/contracts">
             <button class="btn-contracts" id="btn-contracts">Contracts</button>
         </a>
