--- a/src/main/resources/templates/home/carMenu.html
+++ b/src/main/resources/templates/home/carMenu.html
@@ -16,7 +16,7 @@
             <th>Registration Date</th>
             <th>Mileage</th>
             <th>Car Type</th>
-            <th>Buttons</th>
+            <th style="text-align: center">Buttons</th>
         </thead>
         <tbody>
             <tr th:each="car: ${cars}">
