--- a/src/main/resources/templates/home/customers.html
+++ b/src/main/resources/templates/home/customers.html
@@ -6,9 +6,6 @@
     <link rel="stylesheet" type="text/css" href="/customers.css">
 </head>
 <body>
-
-<p>WIP</p>
-
 <h1>Customer List</h1>
 <table>
     <thead>
@@ -23,7 +20,7 @@
         <th>Email</th>
         <th>Driver License</th>
         <th>Driver Since</th>
-        <th colspan="2">Buttons</th>
+        <th colspan="2" style="text-align: center">Buttons</th>
             </tr>
         </thead>
         <tbody>
