--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -16,7 +16,7 @@
 <br/>
     <div class="bttn1">
         <a th:href="${'/carMenu'}">
-            <button id="btn_cars">Go to Car Menu</button>
+            <button id="btn_cars">Cars</button>
         </a>
     </div>
 <br/>
