--- a/src/main/resources/templates/home/contracts.html
+++ b/src/main/resources/templates/home/contracts.html
@@ -6,9 +6,6 @@
     <link rel="stylesheet" type="text/css" href="customers.css">
 </head>
 <body>
-
-<p>WIP</p>
-
 <h1>Contract List</h1>
 <table>
     <thead>
@@ -20,7 +17,7 @@
         <th>End Date</th>
         <th>Max km</th>
         <th>Start km</th>
-
+        <th colspan="3" style="text-align: center">Buttons</th>
 
     </tr>
     </thead>
@@ -33,22 +30,23 @@
         <td th:text="${contract.end_date}"/>
         <td th:text="${contract.max_km}"/>
         <td th:text="${contract.start_km}"/>
+
+        <td>
+            <a th:href="@{'/viewContract/'+${contract.contract_id}}">
+                <button id="btn-viewContract">View Info</button>
+            </a>
+        </td>
         <td>
             <a th:href="@{'/deleteContract/'+${contract.contract_id}}">
                 <button class="btn-delete", id="btn-delete">Delete Contract</button>
             </a>
         </td>
-
         <td>
             <a th:href="@{'/updateContract/'+${contract.contract_id}}">
                 <button class="btn-update", id="btn-update">Update Contract</button>
             </a>
         </td>
     </tr>
-
-
-
-
     </tbody>
 
 </table>
