--- a/src/main/resources/templates/home/updateCar.html
+++ b/src/main/resources/templates/home/updateCar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="customers.css">
+    <link rel="stylesheet" type="text/css" href="/customers.css">
 </head>
 <body>
     <h1>Edit Car Information</h1>
